--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -5,24 +5,73 @@
   height: 5vh;
   z-index: 2;
   background: #111111;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.GitHubFooter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  color: white;
+  text-decoration: none;
 }
 
 .GitHubFooter span {
   display: block;
   background-image: url(./../../img/GitHub.svg);
-  width: 25px;
-  height: 25px;
+  width: 22px;
+  height: 22px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  margin-right: 20px;
+}
+
+.GitHubFooter h1 {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 39px;
+  text-align: center;
+}
+
+.LogoFooter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  color: white;
+  text-decoration: none;
 }
 
 .LogoFooter span {
+  display: block;
   background-image: url(./../../img/logo.svg);
-  width: 200px;
-  height: 25px;
+  width: 150px;
+  height: 18px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  margin-left: 20px;
 }
-/*# sourceMappingURL=footer.css.map */
+
+.LogoFooter h1 {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 39px;
+  text-align: center;
+}
+/*# sourceMappingURL=Footer.css.map */
