--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,6 +1,6 @@
 .FooterContiner {
-  position: absolute;
-  bottom: -100vh;
+  position: relative;
+  bottom: 0px;
   width: 100vw;
   height: 5vh;
   z-index: 2;
