--- a/src/Components/BackgroundImg/BackgroundImg.scss
+++ b/src/Components/BackgroundImg/BackgroundImg.scss
@@ -1,7 +1,7 @@
 .BackgroundImg {
   position: fixed;
-  //width: calc(100vw - 650px);
-  width: 100%;
+  width: calc(100vw - 650px);
+
   height: 100vh;
   background-size: cover;
   background-position: center;
