--- a/src/Components/ChooseGener/ChooseGener.css
+++ b/src/Components/ChooseGener/ChooseGener.css
@@ -1,11 +1,9 @@
 .Container {
-  position: absolute;
-  top: 100vh;
+  background: #000000;
 }
 
 .BlackFadeGener {
-  position: absolute;
-  width: 100vw;
+  width: 100%;
   background: #000000;
   opacity: 1;
   z-index: -1;
@@ -34,7 +32,7 @@
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin: 10px 10% 10px 10%;
+  margin: 10px 5% 10px 5%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
