--- a/src/Components/ChooseGener/ChooseGener.scss
+++ b/src/Components/ChooseGener/ChooseGener.scss
@@ -1,10 +1,8 @@
 .Container {
-  position: absolute;
-  top: 100vh;
+  background: #000000;
 }
 .BlackFadeGener {
-  position: absolute;
-  width: 100vw;
+  width: 100%;
   background: #000000;
   opacity: 1;
   z-index: -1;
@@ -25,7 +23,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin: 10px 10% 10px 10%;
+  margin: 10px 5% 10px 5%;
   justify-content: center;
 }
 .MovieCardsContainer {
