--- a/src/Components/ChooseGener/ChooseGener.scss
+++ b/src/Components/ChooseGener/ChooseGener.scss
@@ -1,5 +1,6 @@
 .Container {
   background: #000000;
+  min-height: 100vh;
 }
 .BlackFadeGener {
   width: 100%;
@@ -10,25 +11,33 @@
 }
 .TitleGener {
   font-style: normal;
-  font-weight: normal;
-  font-size: 25px;
+  font-weight: bold;
+  font-size: 35px;
   line-height: 39px;
   text-align: center;
   width: 100vw;
   margin-top: 0;
-  padding-top: 20px;
-  margin-bottom: 20px;
+  padding-top: 60px;
+  margin-bottom: 60px;
 }
 .GenerContainer {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin: 10px 5% 10px 5%;
+  margin: 0px 10% 0px 10%;
+  margin: auto;
+  padding-bottom: 20px;
   justify-content: center;
+  max-width: 1365px;
 }
 .MovieCardsContainer {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-evenly;
+  margin-top: 40px;
+}
+.description {
+  margin-top: 30%;
+  font-weight: normal;
 }
