--- a/src/Components/MovieCard/MovieCard.css
+++ b/src/Components/MovieCard/MovieCard.css
@@ -3,7 +3,8 @@
   border-radius: 41px;
   width: 230px;
   height: 351px;
-  margin: 10px;
+  margin: 20px;
+  cursor: pointer;
 }
 
 .CardImg {
@@ -24,6 +25,7 @@
   text-align: center;
   position: relative;
   bottom: 13%;
+  margin: 10px 10px 0px 10px;
 }
 
 .CardDate {
