--- a/src/Components/MoviePage/MoviePage.css
+++ b/src/Components/MoviePage/MoviePage.css
@@ -1,13 +1,315 @@
 .MoviePageBackgroundImg {
-  width: 1000px;
-  height: 1000px;
+  position: relative;
   background-size: cover;
   background-position: center;
+  min-height: 95vh;
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.MoviePageBackgroundImg::after {
+  content: "";
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  background-color: rgba(0, 0, 0, 0.9);
 }
 
 .MoviePageImg {
-  width: 1000px;
-  height: 1000px;
+  width: 380px;
+  height: 560px;
   background-size: cover;
+  position: relative;
+  z-index: 2;
+  margin-right: 10%;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.MoviePgeContentContainer {
+  position: relative;
+  z-index: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 60%;
+  margin-left: 10%;
+}
+
+.MoviePageTitleContainer span {
+  font-style: normal;
+  font-weight: lighter;
+  font-size: 30px;
+  line-height: 48px;
+  letter-spacing: 0.08em;
+}
+
+.MoviePageTitle {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 35px;
+  line-height: 48px;
+  display: block;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  -ms-flex-negative: 1;
+      flex-shrink: 1;
+  margin-right: 20px;
+  letter-spacing: 0.08em;
+  margin-bottom: 0;
+}
+
+.MoviePageStatus {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 180.18%;
+  letter-spacing: 0.105em;
+  margin: 0;
+}
+
+.StatusGenerCont {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.GenersContainerMovie {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin: 0;
+}
+
+.GenersContainerMovie div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.GenersContainerMovie div li {
+  list-style-type: none;
+  margin: 8px 5px;
+  font-style: italic;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 158.18%;
+  letter-spacing: 0.08em;
+}
+
+.MoviePageUserScoreContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 20px;
+}
+
+.MoviePageUserScoreContainer h1 {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 158.18%;
+  margin-left: 20px;
+  letter-spacing: 0.08em;
+}
+
+.MovieButtonsContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.first {
+  background-image: url(./../../img/Plus.svg);
+  height: 35px;
+  width: 35px;
+  background-size: cover;
+  background-position: center;
+  display: block;
+  margin: 30px 30px 10px 30px;
+}
+
+.last {
+  background-image: url(./../../img/Play.svg);
+  height: 35px;
+  width: 35px;
+  background-size: auto;
+  background-position: center;
+  display: block;
+  margin: 30px 30px 10px 30px;
+}
+
+.MoviePageButtonsRateContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.MoviePageOverview {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 25px;
+  line-height: 180.18%;
+  letter-spacing: 0.105em;
+  margin: 0px;
+}
+
+.MoviePageOverviewP {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 120%;
+  letter-spacing: 0.105em;
+}
+
+.MoviePageTagline {
+  font-style: italic;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 180.18%;
+  letter-spacing: 0.105em;
+}
+
+.MoreInfoContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.MoreInfoContainer div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 5px 20px 5px 0px;
+}
+
+.MoreInfoContainer div div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.MoreInfoContainer div div h1 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 180.18%;
+  letter-spacing: 0.105em;
+}
+
+.MoreInfoContainer div div h2 {
+  font-style: italic;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 180.18%;
+  letter-spacing: 0.105em;
+  margin-right: 10px;
+}
+
+@media only screen and (max-width: 1000px) {
+  .MoviePageBackgroundImg {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+  .StatusGenerCont {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .MoreInfoContainer div {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .MoviePageButtonsRateContainer {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .GenersContainerMovie {
+    padding: 0;
+  }
 }
 /*# sourceMappingURL=MoviePage.css.map */
