--- a/src/Components/ChooseGener/ChooseGener.css
+++ b/src/Components/ChooseGener/ChooseGener.css
@@ -33,13 +33,12 @@
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin: 0px 10% 0px 10%;
-  margin: auto;
+  margin: 20px auto 0px auto;
+  max-width: 80%;
   padding-bottom: 20px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  max-width: 1365px;
 }
 
 .MovieCardsContainer {
@@ -61,5 +60,44 @@
 .description {
   margin-top: 30%;
   font-weight: normal;
+}
+
+.SearchBar {
+  max-width: 80%;
+  width: 100%;
+  height: 50px;
+  background: #111111;
+  border: none;
+  outline: none;
+  color: white;
+  font-size: 25px;
+  padding: 0px 20px;
+  display: block;
+  margin: auto;
+  margin-top: 40px;
+}
+
+.SearchBar:focus {
+  outline: none;
+}
+
+.SearchBar::-webkit-input-placeholder {
+  color: white;
+  font-size: 25px;
+}
+
+.SearchBar:-ms-input-placeholder {
+  color: white;
+  font-size: 25px;
+}
+
+.SearchBar::-ms-input-placeholder {
+  color: white;
+  font-size: 25px;
+}
+
+.SearchBar::placeholder {
+  color: white;
+  font-size: 25px;
 }
 /*# sourceMappingURL=ChooseGener.css.map */
