--- a/src/Components/ShowPopular/ShowPopular.css
+++ b/src/Components/ShowPopular/ShowPopular.css
@@ -1,1 +1,12 @@
-/* No CSS *//*# sourceMappingURL=ShowPopular.css.map */
+.ShowPopularContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+/*# sourceMappingURL=ShowPopular.css.map */
