--- a/src/Components/HeroSection/HeroSection.scss
+++ b/src/Components/HeroSection/HeroSection.scss
@@ -7,7 +7,8 @@
 }
 
 .BlackFade {
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   max-width: 650px;
   background: #111111;
   z-index: 1;
