--- a/src/Components/ChooseGener/ChooseGener.css
+++ b/src/Components/ChooseGener/ChooseGener.css
@@ -54,7 +54,7 @@
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  margin-top: 40px;
+  margin: 0px 8%;
 }
 
 .description {
@@ -99,5 +99,50 @@
 .SearchBar::placeholder {
   color: white;
   font-size: 25px;
+}
+
+.ButtonContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.ButtonContainer div {
+  margin: 20px;
+  margin-bottom: 40px;
+  width: 50px;
+  height: 50px;
+  background: #00acc1;
+  border-radius: 20px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 30px 30px;
+}
+
+.ButtonContainer div:nth-child(1) {
+  background-image: url(./../../img/arrow.svg);
+}
+
+.ButtonContainer div:nth-child(2) {
+  background-image: url(./../../img/arrow2.svg);
+}
+
+.ButtonContainer div:nth-child(3) {
+  background-image: url(./../../img/arrow2.svg);
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.ButtonContainer div:nth-child(4) {
+  background-image: url(./../../img/arrow.svg);
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 /*# sourceMappingURL=ChooseGener.css.map */
