--- a/src/Components/ChooseGener/ChooseGener.scss
+++ b/src/Components/ChooseGener/ChooseGener.scss
@@ -36,7 +36,8 @@
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-evenly;
-  margin-top: 40px;
+  //margin-top: 40px;
+  margin: 0px 8%;
 }
 .description {
   margin-top: 30%;
@@ -62,5 +63,36 @@
   &::placeholder {
     color: white;
     font-size: 25px;
+  }
+}
+.ButtonContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  div {
+    margin: 20px;
+    margin-bottom: 40px;
+    width: 50px;
+    height: 50px;
+    background: #00acc1;
+    border-radius: 20px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 30px 30px;
+  }
+  div:nth-child(1) {
+    background-image: url(./../../img/arrow.svg);
+  }
+  div:nth-child(2) {
+    background-image: url(./../../img/arrow2.svg);
+  }
+  div:nth-child(3) {
+    background-image: url(./../../img/arrow2.svg);
+    transform: rotate(180deg);
+  }
+  div:nth-child(4) {
+    background-image: url(./../../img/arrow.svg);
+    transform: rotate(180deg);
   }
 }
