--- a/src/Components/MoviePage/MoviePage.scss
+++ b/src/Components/MoviePage/MoviePage.scss
@@ -198,6 +198,24 @@
     }
   }
 }
+
+.video {
+  flex-shrink: 0;
+}
+.SecondRowContainer {
+  margin: 0px 10%;
+  display: flex;
+  flex-direction: row;
+}
+.ReviewsContainer {
+  padding: 20px;
+  display: block;
+  min-width: 200px;
+  background: #111111;
+  height: 473px;
+  overflow: scroll;
+  overflow-x: hidden;
+}
 @media only screen and (max-width: 1000px) {
   .MoviePageBackgroundImg {
     flex-direction: column;
