--- a/src/Components/HeroSection/HeroSection.css
+++ b/src/Components/HeroSection/HeroSection.css
@@ -13,6 +13,7 @@
   max-width: 650px;
   background: #111111;
   z-index: 1;
+  margin-bottom: 20px;
 }
 
 .title {
@@ -237,6 +238,7 @@ hr {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 0;
+  padding-bottom: 20px;
 }
 
 .GenersContainer li {
