--- a/src/Components/MoviePage/MoviePage.scss
+++ b/src/Components/MoviePage/MoviePage.scss
@@ -28,7 +28,7 @@
   margin-right: 10%;
   flex-shrink: 0;
   margin-left: 50px;
-  margin-right: 50px;
+  margin-right: 10%;
 }
 .MoviePgeContentContainer {
   position: relative;
@@ -201,9 +201,10 @@
 
 .video {
   flex-shrink: 0;
+  margin-right: 20px;
 }
 .SecondRowContainer {
-  margin: 0px 10%;
+  margin: 20px 10%;
   display: flex;
   flex-direction: row;
 }
@@ -212,9 +213,22 @@
   display: block;
   min-width: 200px;
   background: #111111;
-  height: 473px;
-  overflow: scroll;
+  height: 483px;
+  overflow: auto;
   overflow-x: hidden;
+}
+@media only screen and (max-width: 1400px) {
+  .SecondRowContainer {
+    flex-wrap: wrap;
+    iframe {
+      width: 100%;
+      margin-bottom: 20px;
+      margin-right: 0px;
+    }
+  }
+  .ReviewsContainer {
+    margin-bottom: 20px;
+  }
 }
 @media only screen and (max-width: 1000px) {
   .MoviePageBackgroundImg {
