--- a/src/Components/ChooseGener/ChooseGener.css
+++ b/src/Components/ChooseGener/ChooseGener.css
@@ -34,7 +34,8 @@
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   margin: 20px auto 0px auto;
-  max-width: 80%;
+  max-width: 100%;
+  margin: 0px 10%;
   padding-bottom: 20px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -63,8 +64,7 @@
 }
 
 .SearchBar {
-  max-width: 80%;
-  width: 100%;
+  width: calc(80% - 40px);
   height: 50px;
   background: #111111;
   border: none;
@@ -73,8 +73,7 @@
   font-size: 25px;
   padding: 0px 20px;
   display: block;
-  margin: auto;
-  margin-top: 40px;
+  margin: 40px auto;
 }
 
 .SearchBar:focus {
