--- a/src/Components/ChooseGener/ChooseGener.scss
+++ b/src/Components/ChooseGener/ChooseGener.scss
@@ -25,8 +25,8 @@
   flex-direction: row;
   flex-wrap: wrap;
   margin: 20px auto 0px auto;
-  max-width: 80%;
-
+  max-width: 100%;
+  margin: 0px 10%;
   padding-bottom: 20px;
 
   justify-content: center;
@@ -44,9 +44,7 @@
   font-weight: normal;
 }
 .SearchBar {
-  max-width: 80%;
-
-  width: 100%;
+  width: calc(80% - 40px);
   height: 50px;
   background: #111111;
   border: none;
@@ -55,8 +53,8 @@
   font-size: 25px;
   padding: 0px 20px;
   display: block;
-  margin: auto;
-  margin-top: 40px;
+  margin: 40px auto;
+
   &:focus {
     outline: none;
   }
