--- a/src/Components/HeroSection/HeroSection.scss
+++ b/src/Components/HeroSection/HeroSection.scss
@@ -12,6 +12,7 @@
   max-width: 650px;
   background: #111111;
   z-index: 1;
+  margin-bottom: 20px;
 }
 .title {
   font-style: normal;
@@ -175,6 +176,7 @@ hr {
   align-items: center;
   justify-content: center;
   padding: 0;
+  padding-bottom: 20px;
 
   li {
     font-style: italic;
