--- a/src/Components/NavBar/NavBar.scss
+++ b/src/Components/NavBar/NavBar.scss
@@ -3,6 +3,7 @@
   width: 80%;
   margin: auto;
   display: flex;
+
   align-items: center;
   background: #111111;
   padding: 0px 10%;
@@ -22,6 +23,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-right: 0px;
     input {
       width: 260px;
       padding: 0px 10px;
@@ -51,6 +53,22 @@
       background: url(./../../img/Search.svg);
       background-position: center;
       background-size: cover;
+    }
+  }
+}
+@media only screen and (max-width: 750px) {
+  .NavBarContainer {
+    flex-direction: column;
+    justify-content: center;
+    height: 10vh;
+    margin: 0px;
+    .SeachBar {
+      width: 255px;
+      margin: 0;
+      margin-top: 20px;
+    }
+    a:nth-child(1) {
+      margin-left: 30px;
     }
   }
 }
