--- a/src/Components/HeroSection/HeroSection.css
+++ b/src/Components/HeroSection/HeroSection.css
@@ -8,12 +8,59 @@
 }
 
 .BlackFade {
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  min-height: 95vh;
   height: 100%;
-  min-height: 100vh;
-  max-width: 650px;
-  background: #111111;
-  z-index: 1;
-  margin-bottom: 20px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.BlackFade::after {
+  content: "";
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.HeroPageContentContainer {
+  position: relative;
+  z-index: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 60%;
+  margin-left: 10%;
+}
+
+.HeroPageImg {
+  width: 380px;
+  height: 560px;
+  background-size: cover;
+  position: relative;
+  z-index: 2;
+  margin-right: 10%;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  margin-left: 50px;
+  margin-right: 10%;
 }
 
 .title {
@@ -21,13 +68,8 @@
   font-weight: bold;
   font-size: 40px;
   line-height: 54px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
   letter-spacing: 0.08em;
-  padding: 50px 25px 0px 25px;
-  margin-top: 0;
+  margin: 0;
 }
 
 .year {
@@ -35,12 +77,7 @@
   font-weight: 300;
   font-size: 22px;
   line-height: 30px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
   letter-spacing: 0.08em;
-  margin-top: 0;
 }
 
 .overview {
@@ -48,21 +85,7 @@
   font-weight: normal;
   font-size: 17px;
   line-height: 180.18%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
   letter-spacing: 0.105em;
-  margin: 0px 50px 25px 50px;
-}
-
-hr {
-  width: 9px;
-  height: 0px;
-  border: 1px solid #ffffff;
 }
 
 .tagline {
@@ -70,22 +93,17 @@ hr {
   font-weight: 300;
   font-size: 17px;
   line-height: 180.18%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
   letter-spacing: 0.105em;
+  margin: 0;
 }
 
 .ButtonsContainer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
 
 .AddContainer {
@@ -96,6 +114,7 @@ hr {
       -ms-flex-align: center;
           align-items: center;
   cursor: pointer;
+  margin-right: 20px;
 }
 
 .AddContainer span {
@@ -110,7 +129,7 @@ hr {
   display: block;
   font-style: normal;
   font-weight: 600;
-  font-size: 24px;
+  font-size: 18px;
   line-height: 180.18%;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -139,7 +158,7 @@ hr {
 .PlayContainer h1 {
   font-style: normal;
   font-weight: 600;
-  font-size: 24px;
+  font-size: 18px;
   line-height: 180.18%;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -158,13 +177,10 @@ hr {
 .score {
   font-style: normal;
   font-weight: 600;
-  font-size: 22px;
+  font-size: 18px;
   line-height: 158.18%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
   letter-spacing: 0.08em;
+  margin-left: 20px;
 }
 
 .score span {
@@ -178,10 +194,9 @@ hr {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  margin: 50px 40px 50px 40px;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
 
 .InfoContainer {
@@ -191,12 +206,28 @@ hr {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   padding: 0;
   list-style: none;
   margin-bottom: 50px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-bottom: 0;
+}
+
+.InfoContainer li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .InfoContainer h1 {
@@ -209,10 +240,11 @@ hr {
           align-items: center;
   text-align: center;
   letter-spacing: 0.105em;
-  margin: 0;
+  margin-right: 20px;
 }
 
 .InfoContainer h2 {
+  margin-right: 20px;
   font-style: italic;
   font-weight: 300;
   font-size: 15px;
@@ -222,7 +254,6 @@ hr {
           align-items: center;
   text-align: center;
   letter-spacing: 0.105em;
-  margin: 0;
   opacity: 0.8;
 }
 
@@ -234,9 +265,6 @@ hr {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   padding: 0;
   padding-bottom: 20px;
 }
@@ -246,7 +274,6 @@ hr {
   font-weight: 300;
   font-size: 15px;
   line-height: 158.18%;
-  opacity: 0.8;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -254,6 +281,10 @@ hr {
   letter-spacing: 0.08em;
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.GenersContainer li:nth-child(1) {
+  margin-left: 0;
 }
 
 .GenersContainer div {
@@ -266,5 +297,43 @@ hr {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+}
+
+@media only screen and (max-width: 1000px) {
+  .BlackFade {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+  .MoreInfoContainer div {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .HeroPageImg {
+    margin-bottom: 20px;
+  }
+  .InfoContainer {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .GenersContainer {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .ButtonsContainer {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .SVGcontainer {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 /*# sourceMappingURL=HeroSection.css.map */
