--- a/src/Components/HeroSection/HeroSection.scss
+++ b/src/Components/HeroSection/HeroSection.scss
@@ -7,73 +7,86 @@
 }
 
 .BlackFade {
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  min-height: 95vh;
   height: 100%;
-  min-height: 100vh;
-  max-width: 650px;
-  background: #111111;
-  z-index: 1;
-  margin-bottom: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    background-color: rgba(0, 0, 0, 0.9);
+  }
+}
+.HeroPageContentContainer {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  margin-left: 10%;
+}
+.HeroPageImg {
+  width: 380px;
+  height: 560px;
+  background-size: cover;
+  position: relative;
+  z-index: 2;
+  margin-right: 10%;
+  flex-shrink: 0;
+  margin-left: 50px;
+  margin-right: 10%;
 }
 .title {
   font-style: normal;
   font-weight: bold;
   font-size: 40px;
   line-height: 54px;
-
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.08em;
-  padding: 50px 25px 0px 25px;
-  margin-top: 0;
+  margin: 0;
 }
 .year {
   font-style: normal;
   font-weight: 300;
   font-size: 22px;
   line-height: 30px;
-
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.08em;
-  margin-top: 0;
 }
 .overview {
   font-style: normal;
   font-weight: normal;
   font-size: 17px;
   line-height: 180.18%;
-
-  display: flex;
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.105em;
-  margin: 0px 50px 25px 50px;
 }
-hr {
-  width: 9px;
-  height: 0px;
-  border: 1px solid #ffffff;
-}
+
 .tagline {
   font-style: italic;
   font-weight: 300;
   font-size: 17px;
   line-height: 180.18%;
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.105em;
+  margin: 0;
 }
 
 .ButtonsContainer {
   display: flex;
-  justify-content: space-evenly;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  justify-content: flex-start;
 }
 .AddContainer {
   display: flex;
   align-items: center;
   cursor: pointer;
+  margin-right: 20px;
 
   span {
     display: block;
@@ -86,7 +99,7 @@ hr {
     display: block;
     font-style: normal;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 18px;
     line-height: 180.18%;
 
     align-items: center;
@@ -109,7 +122,7 @@ hr {
   h1 {
     font-style: normal;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 18px;
     line-height: 180.18%;
 
     align-items: center;
@@ -124,11 +137,12 @@ hr {
 .score {
   font-style: normal;
   font-weight: 600;
-  font-size: 22px;
+  font-size: 18px;
   line-height: 158.18%;
-  align-items: center;
-  text-align: center;
+
   letter-spacing: 0.08em;
+  margin-left: 20px;
+
   span {
     margin-right: 50px;
   }
@@ -136,16 +150,22 @@ hr {
 .SVGcontainer {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
-  margin: 50px 40px 50px 40px;
+  justify-content: flex-start;
 }
 .InfoContainer {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   padding: 0;
   list-style: none;
   margin-bottom: 50px;
+  flex-wrap: wrap;
+  margin-bottom: 0;
+  li {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
 
   h1 {
     font-style: normal;
@@ -155,10 +175,12 @@ hr {
     align-items: center;
     text-align: center;
     letter-spacing: 0.105em;
-    margin: 0;
+
+    margin-right: 20px;
   }
 
   h2 {
+    margin-right: 20px;
     font-style: italic;
     font-weight: 300;
     font-size: 15px;
@@ -166,7 +188,7 @@ hr {
     align-items: center;
     text-align: center;
     letter-spacing: 0.105em;
-    margin: 0;
+
     opacity: 0.8;
   }
 }
@@ -174,7 +196,7 @@ hr {
   display: flex;
   list-style: none;
   align-items: center;
-  justify-content: center;
+
   padding: 0;
   padding-bottom: 20px;
 
@@ -183,7 +205,6 @@ hr {
     font-weight: 300;
     font-size: 15px;
     line-height: 158.18%;
-    opacity: 0.8;
 
     align-items: center;
     text-align: center;
@@ -191,10 +212,40 @@ hr {
     margin-left: 10px;
     margin-right: 10px;
   }
+  li:nth-child(1) {
+    margin-left: 0;
+  }
 
   div {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .BlackFade {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .MoreInfoContainer {
+    div {
+      justify-content: center;
+    }
+  }
+  .HeroPageImg {
+    margin-bottom: 20px;
+  }
+  .InfoContainer {
+    justify-content: center;
+  }
+  .GenersContainer {
+    justify-content: center;
+  }
+  .ButtonsContainer {
+    justify-content: center;
+  }
+  .SVGcontainer {
+    justify-content: center;
   }
 }
