--- a/src/Components/HeroSection/HeroSection.scss
+++ b/src/Components/HeroSection/HeroSection.scss
@@ -81,6 +81,7 @@
 .ButtonsContainer {
   display: flex;
   justify-content: flex-start;
+  margin-top: 10px;
 }
 .AddContainer {
   display: flex;
@@ -90,7 +91,9 @@
 
   span {
     display: block;
-    background-image: url(./../../img/Plus.svg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     width: 28px;
     height: 28px;
     margin-right: 10px;
@@ -158,9 +161,10 @@
   justify-content: flex-start;
   padding: 0;
   list-style: none;
-  margin-bottom: 50px;
+  margin-bottom: 0px;
+  margin-top: 0px;
   flex-wrap: wrap;
-  margin-bottom: 0;
+
   li {
     display: flex;
     flex-direction: row;
