--- a/src/Components/MoviePage/MoviePage.css
+++ b/src/Components/MoviePage/MoviePage.css
@@ -164,6 +164,20 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+}
+
+.MovieButtonsContainer h1 {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 158.18%;
+  margin-left: 20px;
+  letter-spacing: 0.08em;
+  margin: 30px 0px 10px 0px;
 }
 
 .first {
@@ -173,7 +187,7 @@
   background-size: cover;
   background-position: center;
   display: block;
-  margin: 30px 30px 10px 30px;
+  margin: 30px 10px 10px 30px;
 }
 
 .last {
@@ -184,6 +198,7 @@
   background-position: center;
   display: block;
   margin: 30px 30px 10px 30px;
+  cursor: pointer;
 }
 
 .MoviePageButtonsRateContainer {
