--- a/src/Components/MoviePage/MoviePage.scss
+++ b/src/Components/MoviePage/MoviePage.scss
@@ -115,6 +115,17 @@
 .MovieButtonsContainer {
   display: flex;
   flex-direction: row;
+  align-items: center;
+  cursor: pointer;
+  h1 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 158.18%;
+    margin-left: 20px;
+    letter-spacing: 0.08em;
+    margin: 30px 0px 10px 0px;
+  }
 }
 .first {
   background-image: url(./../../img/Plus.svg);
@@ -123,7 +134,7 @@
   background-size: cover;
   background-position: center;
   display: block;
-  margin: 30px 30px 10px 30px;
+  margin: 30px 10px 10px 30px;
 }
 .last {
   background-image: url(./../../img/Play.svg);
@@ -133,6 +144,7 @@
   background-position: center;
   display: block;
   margin: 30px 30px 10px 30px;
+  cursor: pointer;
 }
 .MoviePageButtonsRateContainer {
   display: flex;
