--- a/src/Components/NavBar/NavBar.scss
+++ b/src/Components/NavBar/NavBar.scss
@@ -15,37 +15,21 @@
   a:nth-child(1) {
     margin-left: 0px;
   }
+  .NavBarButtonsContainer {
+    display: flex;
+    flex-direction: row;
+    margin-left: auto;
+  }
   .SeachBar {
     margin-left: auto;
-    background: #5cc3dc;
+
     border-radius: 20px;
     padding-right: 10px;
     display: flex;
     flex-direction: row;
     align-items: center;
     margin-right: 0px;
-    input {
-      width: 260px;
-      padding: 0px 10px;
-      color: white;
-      border: none;
-      height: 25px;
-      -webkit-appearance: none;
-      border: none;
-      background-image: none;
-      background: transparent;
-      -webkit-box-shadow: none;
-      -moz-box-shadow: none;
-      box-shadow: none;
-      &:focus {
-        outline: none;
-      }
-      &::placeholder {
-        color: white;
 
-        opacity: 1;
-      }
-    }
     span {
       display: block;
       width: 20px;
@@ -55,20 +39,45 @@
       background-size: cover;
     }
   }
-}
-@media only screen and (max-width: 750px) {
-  .NavBarContainer {
-    flex-direction: column;
-    justify-content: center;
-    height: 10vh;
-    margin: 0px;
-    .SeachBar {
-      width: 255px;
-      margin: 0;
-      margin-top: 20px;
+  .ViewAddButton {
+    margin-left: auto;
+
+    border-radius: 20px;
+    padding-right: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-right: 0px;
+
+    span {
+      display: block;
+      width: 20px;
+      height: 20px;
+      background: url(./../../img/Plus.svg);
+      background-position: center;
+      background-size: cover;
+      margin-left: 10px;
     }
-    a:nth-child(1) {
-      margin-left: 30px;
+  }
+}
+@media only screen and (max-width: 500px) {
+  //   .NavBarContainer {
+  //     flex-direction: column;
+  //     justify-content: center;
+  //     height: 10vh;
+  //     margin: 0px;
+  //     .SeachBar {
+  //       width: 255px;
+  //       margin: 0;
+  //       margin-top: 20px;
+  //     }
+  //     a:nth-child(1) {
+  //       margin-left: 30px;
+  //     }
+  //   }
+  .NavBarContainer {
+    a {
+      margin: 0px 10px;
     }
   }
 }
